kubernetes/indexer/aramid-indexer/de-1-aramid-indexer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aramidmain-indexer-ingress
  namespace: aramid-indexer-mainnet
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "server: hide";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: DENY";
      proxy_set_header X-Algo-API-Token aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa;
spec:
  tls:
    - hosts:
        - aramidindexer.de-k1.a-wallet.net
      secretName: tls-aramidindexer.de-k1.a-wallet.net
  rules:
    - host: aramidindexer.de-k1.a-wallet.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: g32-aramid-indexer-mainnet-service
                port:
                  number: 8980

---
apiVersion: v1
kind: Service
metadata:
  name: g32-aramid-indexer-mainnet-service
  namespace: aramid-indexer-mainnet
spec:
  type: ClusterIP
  selector:
    app: g32-aramid-indexer-mainnet
  ports:
    - name: algoclient
      protocol: TCP
      appProtocol: http
      port: 8980
      targetPort: 8980
